update to OpenJDK 21, Gradle 8.4